Fix: vegas-container overlayed on top of connect wallet modal due to z-index

--- a/src/views/33Together/33together.scss
+++ b/src/views/33Together/33together.scss
@@ -17,7 +17,7 @@
       width: 97%;
       margin-bottom: -15px;
       margin-top: -10px;
-      z-index: 3;
+      z-index: 2;
       position: sticky;
     }
 
